--- a/index.html
+++ b/index.html
@@ -4,30 +4,33 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
-
+<!----------------------------body starts here ------------------------------>
 <body>
+    <nav>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1 class="logo">Horiseon</h1>
         <div>
             <ul>
-                <li>
+                <li class="nav_links">
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
-                <li>
+                <li class="nav_links">
                     <a href="#online-reputation-management">Online Reputation Management</a>
                 </li>
-                <li>
+                <li class="nav_links">
                     <a href="#social-media-marketing">Social Media Marketing!</a>
                 </li>
             </ul>
         </div>
     </div>
+    </nav>
+    
     <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <article class="content">
+        <div id="search-engine-optimization" class="search-engine-optimization">
+            <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="SEO brainstorm image on writing pad with pens desk with laptop and coffee "  />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -36,7 +39,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="Man at laptop with charts showing online reputation growth benefits" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -45,7 +48,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="share like social media chat" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -54,10 +57,12 @@
             </p>
         </div>
     </div>
+
+    <!------------------------------------Benefits section starts here ---------------->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Light-bulb"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -65,7 +70,7 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="brand awareness lightbulb signal"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -73,7 +78,7 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Money logo coins emblem"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
@@ -81,9 +86,9 @@
         </div>
     </div>
     <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            <p><span>Made with ❤️️ by Horiseon</p></span>&copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
 </body>
