Semantics tags added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
     <div class="header">
-        <h1 class="logo">Horiseon</h1>
+        <h1 class="brand">Horiseon</h1>
         <div>
             <ul>
                 <li class="nav_links">
@@ -20,14 +20,16 @@
                     <a href="#online-reputation-management">Online Reputation Management</a>
                 </li>
                 <li class="nav_links">
-                    <a href="#social-media-marketing">Social Media Marketing!</a>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
         </div>
     </div>
     </nav>
-    
-    <div class="hero"></div>
+ <!-----------------------------------nav header end--------------------------->
+    <section class="hero"></section>
+ <!-------------------------------- First Article Start-------------------------->   
+ <!-------Article sections added to help with SEO ranking and screen reader accessability------------------------------------------------------------------->
     <article class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="SEO brainstorm image on writing pad with pens desk with laptop and coffee "  />
@@ -38,6 +40,12 @@
                 your visibility and find the right customers for your business.
             </p>
         </div>
+    </article>
+    <!---------------------------------------First Article END ---------------->
+
+    <!---------------------------------------Second Article Start ---------------->
+    <section>
+        <article class="content">
         <div id="online-reputation-management" class="online-reputation-management">
             <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="Man at laptop with charts showing online reputation growth benefits" />
             <h2>Online Reputation Management</h2>
@@ -47,6 +55,9 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </div>
+    </article>
+    <!---------------------------------------Second Article END ------------------->
+    <article class="content">
         <div id="social-media-marketing" class="social-media-marketing">
             <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="share like social media chat" />
             <h2>Social Media Marketing</h2>
@@ -57,9 +68,12 @@
             </p>
         </div>
     </div>
+    </article>
+    <!---------------------------------------Third Article END ------------------->
 
-    <!------------------------------------Benefits section starts here ---------------->
-    <div class="benefits">
+
+    <!------------------------------------Benefits ASIDE section starts here ---------------->
+        <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Light-bulb"/>
@@ -85,12 +99,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    </aside>
+    <!---------------------------------------Footer Begins here ------------------->
+    <footer class="footer">
         
-        <p>
-            <p><span>Made with ❤️️ by Horiseon</p></span>&copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+            <p>Made with ❤️️ by Horiseon<span>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
+    <footer>
 </body>
 
 </html>
