html elements logical structure added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <ul>
                 <li class="nav_links">
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                   <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li class="nav_links">
                     <a href="#online-reputation-management">Online Reputation Management</a>
@@ -73,7 +73,7 @@
 
 
     <!------------------------------------Benefits ASIDE section starts here ---------------->
-        <aside class="benefits">
+        <section class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Light-bulb"/>
@@ -99,11 +99,11 @@
             </p>
         </div>
     </div>
-    </aside>
+</section>
     <!---------------------------------------Footer Begins here ------------------->
     <footer class="footer">
         
-            <p>Made with ❤️️ by Horiseon<span>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
+            <span><h4>Made with ❤️️ by Horiseon</h4><p>&copy; 2023 Horiseon Social Solution Services, Inc.</p></span>
     <footer>
 </body>
 
